	  this, it requires a hcode.db rebuild which sucks. If
	  admins don't want targcomp modes, they can refrain
	  from setting targcomp to values other than 0 on
	  units. (Greg)
	* Removed EXTENDED_ADVANTAGES define for much the same
	  reason as the last two. If admins don't want to use
	  the feature, don't add the advantages to players. (Greg)

	- Merge
	* Added Exile's roll on back walk code. (Tuncay)
	* Added Exile's mine trigger stuff which seperates the
	  Trigger mine and makes it more usable. (Dany)
	* Added Exile's emits (to MechDebugInfo) for picking up
	  and dropping off units. (Dany)
	* Added Exile's Waterproof_Tech but it works on all units
	  except for aeros, vtols and DSes.  Basicly negates any
	  rolls or affects that water has on a unit although
	  the units will still slow down in water. (Dany)
	* Added Coolant Guns. (Dany)
	* Added 'vector' command. (Power_Shaper)
	* Changed tacheight to tacsize. (Dany)
	* Added Exile's head hit stun code.  Can be turned on/off using the
	  mudconf parameter 'btech_exile_stun_code'. (Dany)
	* Finished hooking Maneuvering Ace to turnmodes. (Power_Shaper)
        * Added Exile's Observer channel code with coloring (Power_Shaper)

	- Bugfixes
	* Fixed mistiming in weapon recycling code. (Martin Murray)
	* Can no longer hide while OOD'ing (Greg Taylor)
	* Fixed btsetcharvalue() and btgetcharvalue() crashers.
	  (Martin Murray)
	* Some fixes for the mux to compile on Linux/amd64,
	  still a bunch of 32/64 bit issues. (Martin Murray)
	* Changed notify_check to notify_checked, was conflicting 
	  with a builtin function on Mac OS X. (Dany)
	* Fixes for embark and udisembark. (Dany)
	* Fixes to the configure system. (Dany)
	* btsetpartcost() corrected negative cost error check. (George Ponick)
	* btdamagemech() total damage limited to 1000 to prevent runaway loop. (George Ponick)
	* Fixed bttechlist() to prevent that FUSTAG bug. (Greg Taylor)
	* Fix for bug #1321731.  Masc code more in line with FASA