@@ -741,8 +741,8 @@ CommandsStruct mechrepcommands[] = {
     {0, "SETARMOR <LOC> <AVAL> <IVAL> <RVAL>",
 	    "@Sets the armor, int. armor, and rear armor.",
 	mechrep_Rsetarmor},
-    {0, "ADDWEAP <NAME> <LOC> <CRIT SECS> [RT]",
-	    "@Adds weapon to the mech, using given loc and crit slots",
+    {0, "ADDWEAP <NAME> <LOC> <CRIT SECS> [R|T|O]",
+	    "@Adds weapon to the mech, using given loc, crits, and flags.",
 	mechrep_Raddweap},
 
     {0, "RESETCRITS", "@Resets criticals of the toy to base of type.",
@@ -761,8 +761,8 @@ CommandsStruct mechrepcommands[] = {
 	mechrep_Rshowtech},
     {0, "ADDTECH <TYPE>",
 	"@Adds the advanced technology to the mech.", mechrep_Raddtech},
-    {0, "DELTECH",
-	    "@Deletes all the advanced technology of the mech.",
+    {0, "DELTECH <ALL or [<TECH>]>",
+	    "@Deletes all or one advanced technologies on the mech.",
 	mechrep_Rdeltech},
     {0, "ADDINFTECH <TYPE>",
 	    "@Adds the advanced infantry technology to the mech.",
